--- a/index.html
+++ b/index.html
@@ -112,11 +112,9 @@
             <i class="fa-solid fa-magnifying-glass"></i>
             </button>
             <input type="text" placeholder="Search.." id="search">
-
             <a id="home" href="../Mainpage/mainpage.html">Home</a>
             <a href="../library/library.html" id="lib">Library</a>
        
-
             <button class="btn btn-light dropdown-toggle" type="button" data-toggle="dropdown" id="write">Write
                 <span class="caret"></span>
             </button>
@@ -126,7 +124,6 @@
                 </li>
                 <li><a href="../Newstory/new story.html" id="mystories">My Stories</a></li>
             </ul>
-
             <a href="../premium page/premium.html">
                 <button class="btn btn-outline-dark" id="premium">
                  <i class="fa-solid fa-bolt symbol"></i>    Try Premium
@@ -158,10 +155,11 @@
         <div id="modeGeo">
     
             <div id="geolocation">
-                <button onClick="geolocation()" class="btn btn-outline-primary" id="button">
-                    <i class="bi bi-cloud-fill cloud"></i>   
+                <button onClick="geolocation()" class="btn btn-outline-light" id="button">
+                    <img src="images/icon.png" alt="weathericon" id="buttonimg"/>
                </button>
                <p id="weather">Weather</p>
+               <img src="images/icon.png" alt="weathericon" id="backimage" />
                <p id="out"></p>
                 <p id="weatherOut"></p> 
             </div>
