--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <img src="images/icon.png" alt="weathericon" id="buttonimg"/>
                </button>
                <p id="weather">Weather</p>
-               <img src="images/icon.png" alt="weathericon" id="backimage" />
+               <img src="images/halficon.png" alt="weathericon" id="backimage" />
                <p id="out"></p>
                 <p id="weatherOut"></p> 
             </div>
